--- a/www/css/style.css
+++ b/www/css/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 
-/* Style the connexion container */
+/* Style the employee container */
 #main-connexion {
 	margin: 0 auto; /* Centage horizontal du bloc */
 	width: 50%;
