--- a/App/Views/formation.twig
+++ b/App/Views/formation.twig
@@ -1,44 +1,64 @@
-{#<?php#}
-{#include('template/head.php');#}
-{#include('template/menu.php');#}
 
-<article>
-    <header><?php echo $titrePage;?> </header>
-
-    <div class="col-lg-6">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                Liste des Formations
-            </div>
-            <!-- /.panel-heading -->
-            <div class="panel-body">
-                <div class="table-responsive">
-                    <table class="table table-striped">
-                        <thead><tr><th>#</th><th>Libelle</th><th>Date</th></tr></thead>
-                        <tbody>
-
-                        {% for formation in formations %}
-                            {{ loop.id }} - {{ formation.libelle }}
-                        {% endfor %}
+{% include('template/header-sb-admin.php') %}
+{% include('template/menu-sb-admin.php') %}
 
 
-                        for ($i=0; $i>count($result); $i++){
-                        echo'<tr>'.'<td>'.$result->id[$i].'</td>'.'<td>'.$result->formation_libelle[$i].'</td>'.'<td>'.$result->date[$i].'</td>';
-                            };
-                            ?>
-                        </tbody>
-                    </table>
+
+<!-- Page Content -->
+<div id="page-wrapper">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="page-header"><?php echo $titrePage;?></h1>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                Formations de <?php //echo $_SESSION['name'] ?>
+                            </div>
+                            <!-- /.panel-heading -->
+                            <div class="panel-body">
+                                <div class="table-responsive">
+
+                                    <?php
+                                        if($formations!=null)
+                                        {
+                                        ?>
+                                    <table class="table table-striped table-bordered table-hover">
+                                        <thead>
+                                        <tr>
+                                            <th>Date</th>
+                                            <th>Libelle</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <?php
+                                            foreach ($formations as $formation)
+                                            {
+                                                echo '<tr><td>' . $formation->getDate() . '</td>' . '<td>' . $formation->getLibelle() . '</td></tr>';
+                                        }
+                                        }else{
+                                        echo('Inscrivez vous a une formation');
+                                        }
+
+                                        ?>
+                                        </tbody>
+                                    </table>
+                                </div>
+                                <!-- /.table-responsive -->
+                            </div>
+                            <!-- /.panel-body -->
+                        </div>
+                        <!-- /.panel -->
+                    </div>
                 </div>
-                <!-- /.table-responsive -->
             </div>
-            <!-- /.panel-body -->
+            <!-- /.col-lg-12 -->
         </div>
-        <!-- /.panel -->
+        <!-- /.row -->
     </div>
+    <!-- /.container-fluid -->
+</div>
+<!-- /#page-wrapper -->
 
-
-
-
-
-</article>
-{#include('template/footer.php');#}
+{% include('template/footer-sb-admin.php') %}
