--- a/App/Views/absence.twig
+++ b/App/Views/absence.twig
@@ -3,7 +3,55 @@
 {% block content %}
 
 
-Absence
+    <!-- Page Content -->
+    <div id="page-wrapper">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="page-header">{{ title }} </h1>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    Absence de
+                                </div>
+                                <!-- /.panel-heading -->
+                                <div class="panel-body">
+                                    <div class="table-responsive">
+                                        <table class="table table-striped table-bordered table-hover">
+                                            <thead>
+                                            <tr>
+                                                <th>Date de début</th>
+                                                <th>Date de fin</th>
+                                                <th>Motif</th>
+                                                <th>Type</th>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
 
+                                            {% for absence in absences %}
+
+                                            <tr><td> {{ absence.getStartDate()  }} </td><td>{{ absence.getEndDate() }} </td><td>{{ absence.getAbsencePattern() }}</td><td>{{ absence.getType() }}</td></tr>
+
+                                            {% endfor %}
+
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    <!-- /.table-responsive -->
+                                </div>
+                                <!-- /.panel-body -->
+                            </div>
+                            <!-- /.panel -->
+                        </div>
+                    </div>
+                </div>
+                <!-- /.col-lg-12 -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container-fluid -->
+    </div>
+    <!-- /#page-wrapper -->
 
 {% endblock %}
