--- a/App/Views/absence.twig
+++ b/App/Views/absence.twig
@@ -13,7 +13,7 @@
                         <div class="col-lg-6">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    Absence de
+                                    Absence de {{ employee.getName() }}
                                 </div>
                                 <!-- /.panel-heading -->
                                 <div class="panel-body">
