--- a/App/Views/absence.twig
+++ b/App/Views/absence.twig
@@ -8,12 +8,12 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">{{ title }} </h1>
+                    <h1 class="page-header">{{ page.title }} </h1>
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    Absence de {{ employee.getName() }}
+                                    Absence de {{ employee[0].getName() }} {{ employee[0].getFirstname() }}
                                 </div>
                                 <!-- /.panel-heading -->
                                 <div class="panel-body">
@@ -53,5 +53,13 @@
         <!-- /.container-fluid -->
     </div>
     <!-- /#page-wrapper -->
+
+{% endblock %}
+
+
+
+{% block footer %}
+
+    {{ page.footer }}
 
 {% endblock %}
