--- a/App/Views/formation.twig
+++ b/App/Views/formation.twig
@@ -3,7 +3,60 @@
 {% block content %}
 
 
-Formation
+    <!-- Page Content -->
+    <div id="page-wrapper">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="page-header"><?php echo $titrePage;?></h1>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    Formations de
+                                </div>
+                                <!-- /.panel-heading -->
+                                <div class="panel-body">
+                                    <div class="table-responsive">
+
+                                            {% if(formations!=null) %}
+
+                                            <table class="table table-striped table-bordered table-hover">
+                                            <thead>
+                                            <tr>
+                                                <th>Date</th>
+                                                <th>Libelle</th>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+
+                                            {% for formation in formations %}
+
+                                            <tr><td> {{ formation.getDate()  }} </td><td> {{ formation.getLibelle()}} </td></tr>
+
+                                            {% endfor %}
+                                            {% else %}
+                                            Inscrivez vous a une formation
+
+                                            {% endif %}
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    <!-- /.table-responsive -->
+                                </div>
+                                <!-- /.panel-body -->
+                            </div>
+                            <!-- /.panel -->
+                        </div>
+                    </div>
+                </div>
+                <!-- /.col-lg-12 -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container-fluid -->
+    </div>
+    <!-- /#page-wrapper -->
 
 
 {% endblock %}
