--- a/App/Views/layout.twig
+++ b/App/Views/layout.twig
@@ -60,8 +60,7 @@
                     <li><a href="#"><i class="fa fa-gear fa-fw"></i> Paramètres</a>
                     </li>
                     <li class="divider"></li>
-                    <li><a href="#"><i class="fa fa-sign-out fa-fw"></i> Déconnexion</a>
-                    {#<li><a href="../index.php?c=connexion&action=deconnecter"><i class="fa fa-sign-out fa-fw"></i> Déconnexion</a>#}
+                    <li><a href="{{ path_for('logout') }}"><i class="fa fa-sign-out fa-fw"></i> Déconnexion</a>
                     </li>
                 </ul>
                 <!-- /.dropdown-user -->
@@ -107,6 +106,7 @@
 
 
     {% block content %}
+
     {% endblock %}
 
 
@@ -119,7 +119,7 @@
     <footer class="sticky-footer">
         <div class="container">
             <div class="text-center">
-                <small>Copyright © <?php echo Config\Config::APPLI_NAME . ' ' . Config\Config::APPLI_VERSION; ?> Théo GUYONNET</small>
+                <small>Copyright © {%  block footer %}  {% endblock %}   Théo GUYONNET</small>
             </div>
         </div>
     </footer>
