--- a/App/Views/login.twig
+++ b/App/Views/login.twig
@@ -10,6 +10,7 @@
 <div id="main-connexion">
     <title>{{ title }}</title>
 
+    <a>{{ alerte }}</a>
 
     <form method="POST" action="{{ path_for('login') }}">
         <label for="email" >Adresse email</label>
