--- a/App/Views/layout.twig
+++ b/App/Views/layout.twig
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>{{ title }}</title>
+    <title>{{ page.title }}</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="./sb-admin2/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
