--- a/App/Views/formation.twig
+++ b/App/Views/formation.twig
@@ -8,12 +8,12 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header"><?php echo $titrePage;?></h1>
+                    <h1 class="page-header">{{ page.title }} </h1>
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    Formations de
+                                    Formations de {{ page.employee[0].getName() }} {{ page.employee[0].getFirstname() }}
                                 </div>
                                 <!-- /.panel-heading -->
                                 <div class="panel-body">
