--- a/App/Views/layout.twig
+++ b/App/Views/layout.twig
@@ -47,11 +47,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ path_for('dashboard') }}">Sanofi<?php echo Config\Config::APPLI_NAME.' '.Config\Config::APPLI_VERSION; ?></a>
+            <a class="navbar-brand" href="{{ path_for('dashboard') }}">Sanofi</a>
         </div>
         <!-- /.navbar-header -->
 
         <ul class="nav navbar-top-links navbar-right">
+            <a>{{ page.nom }}</a>
+
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                     <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
