--- a/App/Views/formation.twig
+++ b/App/Views/formation.twig
@@ -32,7 +32,7 @@
 
                                             {% for formation in formations %}
 
-                                            <tr><td> {{ formation.getDate()  }} </td><td> {{ formation.getLibelle()}} </td></tr>
+                                            <tr><td> {{ formation.getDate()  }} </td><td> {{ formation.getFormationLibelle()}} </td></tr>
 
                                             {% endfor %}
                                             {% else %}
