--- a/App/Views/absence.twig
+++ b/App/Views/absence.twig
@@ -10,14 +10,16 @@
                 <div class="col-lg-12">
                     <h1 class="page-header">{{ page.title }} </h1>
                     <div class="row">
-                        <div class="col-lg-6">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    Absence de {{ page.employee[0].getName() }} {{ page.employee[0].getFirstname() }}
+                                    Absence(s) de {{ page.employee[0].getName() }} {{ page.employee[0].getFirstname() }}
                                 </div>
                                 <!-- /.panel-heading -->
                                 <div class="panel-body">
                                     <div class="table-responsive">
+
+                                        {% if(absences!=null) %}
+
                                         <table class="table table-striped table-bordered table-hover">
                                             <thead>
                                             <tr>
@@ -27,6 +29,7 @@
                                                 <th>Type</th>
                                             </tr>
                                             </thead>
+
                                             <tbody>
 
                                             {% for absence in absences %}
@@ -34,6 +37,11 @@
                                             <tr><td> {{ absence.getStartDate()  }} </td><td>{{ absence.getEndDate() }} </td><td>{{ absence.getAbsencePattern() }}</td><td>{{ absence.getType() }}</td></tr>
 
                                             {% endfor %}
+                                            {% else %}
+                                                Vous n'avez pas d'asbences.
+
+                                            {% endif %}
+
 
                                             </tbody>
                                         </table>
@@ -43,7 +51,6 @@
                                 <!-- /.panel-body -->
                             </div>
                             <!-- /.panel -->
-                        </div>
                     </div>
                 </div>
                 <!-- /.col-lg-12 -->
