--- a/App/Views/carriere.twig
+++ b/App/Views/carriere.twig
@@ -3,7 +3,63 @@
 {% block content %}
 
 
+    <!-- Page Content -->
+    <div id="page-wrapper">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="page-header">{{ page.title }} </h1>
+                    <div class="row">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                Poste(s) de {{ page.employee[0].getName() }} {{ page.employee[0].getFirstname() }}
+                            </div>
+                            <!-- /.panel-heading -->
+                            <div class="panel-body">
+                                <div class="table-responsive">
 
+                                    {% if(posts!=null) %}
+
+                                    <table class="table table-striped table-bordered table-hover">
+                                        <thead>
+                                        <tr>
+                                            <th>Libellé</th>
+                                            <th>Mission</th>
+                                        </tr>
+                                        </thead>
+
+                                        <tbody>
+
+                                        {% for post in posts %}
+
+                                            <tr><td> {{ post.getPostLibelle()  }} </td><td>{{ post.getMission() }} </td></tr>
+
+                                        {% endfor %}
+
+                                        </tbody>
+
+                                        {% else %}
+                                            Vous n'avez aucuns postes.
+
+                                        {% endif %}
+
+
+                                    </table>
+                                </div>
+                                <!-- /.table-responsive -->
+                            </div>
+                            <!-- /.panel-body -->
+                        </div>
+                        <!-- /.panel -->
+                    </div>
+                </div>
+                <!-- /.col-lg-12 -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container-fluid -->
+    </div>
+    <!-- /#page-wrapper -->
 
 
 {% endblock %}
