--- a/App/Views/layout.twig
+++ b/App/Views/layout.twig
@@ -52,9 +52,11 @@
         <!-- /.navbar-header -->
 
         <ul class="nav navbar-top-links navbar-right">
-            <a>{{ page.nom }}</a>
-
+            <li>
+                <a> Connecté en tant que: {{ page.employee[0].getEmail() }}</a>
+            </li>
             <li class="dropdown">
+
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                     <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
                 </a>
