--- a/App/Views/carriere.twig
+++ b/App/Views/carriere.twig
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-    <!-- Page Content -->
+    <!-- Post Table -->
     <div id="page-wrapper">
         <div class="container-fluid">
             <div class="row">
@@ -27,22 +27,17 @@
                                             <th>Mission</th>
                                         </tr>
                                         </thead>
-
                                         <tbody>
 
                                         {% for post in posts %}
-
                                             <tr><td> {{ post.getPostLibelle()  }} </td><td>{{ post.getMission() }} </td></tr>
-
                                         {% endfor %}
 
                                         </tbody>
 
                                         {% else %}
                                             Vous n'avez aucuns postes.
-
                                         {% endif %}
-
 
                                     </table>
                                 </div>
@@ -52,6 +47,61 @@
                         </div>
                         <!-- /.panel -->
                     </div>
+
+                    <!-- Post details  !-->
+                    <div class="row">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                Détail du poste {{ detail.getPostLibelle() }}
+                            </div>
+                            <div class="panel-body">
+                                <div class="table-responsive">
+
+                                    <p> <strong>Libellé:</strong> {{ detail.getPostLibelle() }} </p>
+                                    <p>  <strong>Mission:</strong> {{ detail.getMission() }} </p>
+                                    <p>  <strong>Salaire:</strong> {{ detail.getSalary() }}€ </p>
+                                    <p>  <strong>Date d'embauche:</strong> {{ detail.getHiringDate() }} </p>
+
+                                    {% if detail.getTermination() != null %}
+                                        <p>  <strong>Date de licenciement:</strong> {{ detail.getTermination() }} </p>
+                                    {% elseif detail.getRetirement() != null %}
+                                        <p>  <strong>Date de retraite:</strong> {{ detail.getRetirement() }} </p>
+                                    {% elseif detail.getDeparture() != null %}
+                                        <p>  <strong>Date de démission:</strong> {{ detail.getDeparture() }} </p>
+                                    {% endif %}
+                                </div>
+
+
+                                {% if detail.getBounty() != null %}
+                                <p> <strong>Prime:</strong></p>
+
+                                <table class="table table-striped table-bordered table-hover">
+                                    <thead>
+                                    <tr>
+                                        <th>Montant</th>
+                                        <th>Date</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    {% for bounty in detail.getBounty() %}
+                                        <tr><td> {{ bounty.getAmount() }}€ </td><td>{{ bounty.getDate() }} </td></tr>
+                                    {% endfor %}
+                                    </tbody>
+                                    {% endif %}
+                                </table>
+
+
+
+
+                            </div>
+                            <!-- /.panel-body -->
+                        </div>
+                        <!-- /.panel -->
+                    </div>
+
+
+
+
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
@@ -59,7 +109,9 @@
         </div>
         <!-- /.container-fluid -->
     </div>
-    <!-- /#page-wrapper -->
+    <!-- end post table -->
+
+
 
 
 {% endblock %}
