--- a/App/Views/formation.twig
+++ b/App/Views/formation.twig
@@ -12,7 +12,7 @@
                     <div class="row">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    Formations de {{ page.employee[0].getName() }} {{ page.employee[0].getFirstname() }}
+                                    Formation(s) de {{ page.employee[0].getName() }} {{ page.employee[0].getFirstname() }}
                                 </div>
                                 <!-- /.panel-heading -->
                                 <div class="panel-body">
