--- a/App/Views/layout.twig
+++ b/App/Views/layout.twig
@@ -12,16 +12,16 @@
     <title>{{ page.title }}</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="./sb-admin2/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../sb-admin2/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- MetisMenu CSS -->
-    <link href="./sb-admin2/vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
+    <link href="../sb-admin2/vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="./sb-admin2/dist/css/sb-admin-2.css" rel="stylesheet">
+    <link href="../sb-admin2/dist/css/sb-admin-2.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="./sb-admin2/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../sb-admin2/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -31,9 +31,7 @@
     <![endif]-->
 </head>
 
-
-
-
+<!-- Navigation -->
 <body>
 
 <div id="wrapper">
@@ -105,23 +103,19 @@
         </div>
         <!-- /.navbar-static-side -->
     </nav>
+    <!-- End Navigation -->
 
 
-
-
+    <!-- Content -->
     {% block content %}
 
 
 
     {% endblock %}
+    <!-- End Content -->
 
 
-
-
-
-
-
-
+    <!-- Footer -->
     <footer class="sticky-footer">
         <div class="container">
             <div class="text-center">
@@ -134,17 +128,18 @@
 <!-- /#wrapper -->
 
 <!-- jQuery -->
-<script src="./sb-admin2/vendor/jquery/jquery.min.js"></script>
+<script src="../sb-admin2/vendor/jquery/jquery.min.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="./sb-admin2/vendor/bootstrap/js/bootstrap.min.js"></script>
+<script src="../sb-admin2/vendor/bootstrap/js/bootstrap.min.js"></script>
 
 <!-- Metis Menu Plugin JavaScript -->
-<script src="./sb-admin2/vendor/metisMenu/metisMenu.min.js"></script>
+<script src="../sb-admin2/vendor/metisMenu/metisMenu.min.js"></script>
 
 <!-- Custom Theme JavaScript -->
-<script src="./sb-admin2/dist/js/sb-admin-2.js"></script>
+<script src="../sb-admin2/dist/js/sb-admin-2.js"></script>
 
 </body>
 
 </html>
+<!-- End Footer -->
