--- a/App/Views/poste.twig
+++ b/App/Views/poste.twig
@@ -3,56 +3,79 @@
 {% block content %}
 
 
-    <!-- Post details  !-->
-    <div class="row">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                Détail du poste {{ detail.getPostLibelle() }}
-            </div>
-            <div class="panel-body">
-                <div class="table-responsive">
+    <!-- Post Table -->
+    <div id="page-wrapper">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="page-header">{{ page.title }} </h1>
+                    <div class="row">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                Détail du poste {{ detail.getPostLibelle() }}
+                            </div>
+                            <div class="panel-body">
+                                <div class="table-responsive">
 
-                    <p> <strong>Libellé:</strong> {{ detail.getPostLibelle() }} </p>
-                    <p>  <strong>Mission:</strong> {{ detail.getMission() }} </p>
-                    <p>  <strong>Salaire:</strong> {{ detail.getSalary() }}€ </p>
-                    <p>  <strong>Date d'embauche:</strong> {{ detail.getHiringDate() }} </p>
+                                    <p> <strong>Libellé:</strong> {{ detail.getPostLibelle() }} </p>
+                                    <p>  <strong>Mission:</strong> {{ detail.getMission() }} </p>
+                                    <p>  <strong>Salaire:</strong> {{ detail.getSalary() }}€ </p>
+                                    <p>  <strong>Date d'embauche:</strong> {{ detail.getHiringDate() }} </p>
 
-                    {% if detail.getTermination() != null %}
-                        <p>  <strong>Date de licenciement:</strong> {{ detail.getTermination() }} </p>
-                    {% elseif detail.getRetirement() != null %}
-                        <p>  <strong>Date de retraite:</strong> {{ detail.getRetirement() }} </p>
-                    {% elseif detail.getDeparture() != null %}
-                        <p>  <strong>Date de démission:</strong> {{ detail.getDeparture() }} </p>
-                    {% endif %}
+                                    {% if detail.getTermination() != null %}
+                                        <p>  <strong>Date de licenciement:</strong> {{ detail.getTermination() }} </p>
+                                    {% elseif detail.getRetirement() != null %}
+                                        <p>  <strong>Date de retraite:</strong> {{ detail.getRetirement() }} </p>
+                                    {% elseif detail.getDeparture() != null %}
+                                        <p>  <strong>Date de démission:</strong> {{ detail.getDeparture() }} </p>
+                                    {% endif %}
+                                </div>
+
+
+                                {% if detail.getBounty() != null %}
+                                    <p> <strong>Prime:</strong></p>
+
+                                    <table class="table table-striped table-bordered table-hover">
+                                        <thead>
+                                        <tr>
+                                            <th>Montant</th>
+                                            <th>Date</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        {% for bounty in detail.getBounty() %}
+                                            <tr><td> {{ bounty.getAmount() }}€ </td><td>{{ bounty.getDate() }} </td></tr>
+                                        {% endfor %}
+                                        </tbody>
+                                    </table>
+                                {% endif %}
+
+
+
+
+                            </div>
+                            <!-- /.panel-body -->
+                        </div>
+                        <!-- /.panel -->
+                        </div>
+                        <!-- /.panel -->
+                    </div>
+
+
+
                 </div>
-
-
-                {% if detail.getBounty() != null %}
-                <p> <strong>Prime:</strong></p>
-
-                <table class="table table-striped table-bordered table-hover">
-                    <thead>
-                    <tr>
-                        <th>Montant</th>
-                        <th>Date</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for bounty in detail.getBounty() %}
-                        <tr><td> {{ bounty.getAmount() }}€ </td><td>{{ bounty.getDate() }} </td></tr>
-                    {% endfor %}
-                    </tbody>
-                    {% endif %}
-                </table>
-
-
-
-
+                <!-- /.col-lg-12 -->
             </div>
-            <!-- /.panel-body -->
+            <!-- /.row -->
         </div>
-        <!-- /.panel -->
+        <!-- /.container-fluid -->
     </div>
+    <!-- end post table -->
+
+
+
+
+
 
 
 
