--- a/App/Views/dashboard.twig
+++ b/App/Views/dashboard.twig
@@ -3,7 +3,88 @@
 {% block content %}
 
 
-Dashboard
+<div id="page-wrapper">
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">Dashboard</h1>
+        </div>
+        <!-- /.col-lg-12 -->
+    </div>
+    <!-- /.row -->
+
+    <div class="text-center">
+    <div class="row">
+        <div class="col-lg-3 col-md-6">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <div class="row">
+                        <div class="col-xs-3">
+                            <i class="fa fa-info-circle fa-5x"></i>
+                        </div>
+                        <div class="col-xs-9 text-right">
+                            <div class="huge">{{ count['formations'] }}</div>
+                            <div>Formation(s)</div>
+                        </div>
+                    </div>
+                </div>
+                <a href="{{ path_for('formation') }}">
+                    <div class="panel-footer">
+                        <span class="pull-left">Voir le détail</span>
+                        <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                        <div class="clearfix"></div>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6">
+            <div class="panel panel-green">
+                <div class="panel-heading">
+                    <div class="row">
+                        <div class="col-xs-3">
+                            <i class="fa fa-user fa-5x"></i>
+                        </div>
+                        <div class="col-xs-9 text-right">
+                            <div class="huge">{{ count['postes'] }}</div>
+                            <div>Poste(s)</div>
+                        </div>
+                    </div>
+                </div>
+                <a href="{{ path_for('carriere') }}">
+                    <div class="panel-footer">
+                        <span class="pull-left">Voir le détail</span>
+                        <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                        <div class="clearfix"></div>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6">
+            <div class="panel panel-yellow">
+                <div class="panel-heading">
+                    <div class="row">
+                        <div class="col-xs-3">
+                            <i class="fa fa-times-circle fa-5x"></i>
+                        </div>
+                        <div class="col-xs-9 text-right">
+                            <div class="huge">{{ count['absences'] }}</div>
+                            <div>Absence(s)</div>
+                        </div>
+                    </div>
+                </div>
+                <a href="{{ path_for('absence') }}">
+                    <div class="panel-footer">
+                        <span class="pull-left">Voir le détail</span>
+                        <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                        <div class="clearfix"></div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+    </div>
+</div>
 
 
 {% endblock %}
