--- a/App/Views/dashboard.twig
+++ b/App/Views/dashboard.twig
@@ -4,16 +4,19 @@
 
 
 <div id="page-wrapper">
+
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">Dashboard</h1>
         </div>
-        <!-- /.col-lg-12 -->
     </div>
-    <!-- /.row -->
 
-    <div class="text-center">
-    <div class="row">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h4>Bienvenue {{ page.employee[0].getName() }} {{ page.employee[0].getFirstname() }}</h4>
+        </div>
+    </div>
+
         <div class="col-lg-3 col-md-6">
             <div class="panel panel-primary">
                 <div class="panel-heading">
@@ -82,7 +85,6 @@
                 </a>
             </div>
         </div>
-    </div>
     </div>
 </div>
 
