--- a/App/Views/login.twig
+++ b/App/Views/login.twig
@@ -12,11 +12,15 @@
 
     <form method="POST" action="{{ path_for('login') }}">
         <label for="email" >Adresse email</label>
-        <input type="email" id="email" name="email" placeholder="Votre adresse mail" value="petitjean.elise@voila.fr">
+        <input type="email" id="email" name="email" placeholder="Votre adresse mail">
         <label for="mdp" >Mot de passe</label>
-        <input type="password" id="mdp" name="password" placeholder="Votre mot de passe" value="pwDeschamps">
+        <input type="password" id="mdp" name="password" placeholder="Votre mot de passe">
         <input type="submit" value="Connexion">
     </form>
+
+    <p>Identifiant: Leleu.D@noos.fr - Mdp: pwLeleu</p>
+    <p>Identifiant: Marion.T@yahoo.fr - Mdp: pwMarion</p>
+
 </div>
 </body>
 </html>
