add form for formation - absence

--- a/App/Views/absence.twig
+++ b/App/Views/absence.twig
@@ -8,7 +8,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">{{ page.title }} </h1>
+                    <h1 class="page-header">{{ page.title }} <a href="{{ path_for('form_absence') }}"><i class="fa fa-plus-circle" aria-hidden="true"></i></a></h1>
                     <div class="row">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
