--- a/App/Views/formation.twig
+++ b/App/Views/formation.twig
@@ -8,7 +8,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">{{ page.title }} </h1>
+                    <h1 class="page-header">{{ page.title }} <a href="{{ path_for('form_formation') }}"><i class="fa fa-plus-circle" aria-hidden="true"></i></a></h1>
                     <div class="row">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
@@ -60,3 +60,13 @@
 
 
 {% endblock %}
+
+
+
+{% block footer %}
+
+    {{ page.footer }}
+
+{% endblock %}
+
+
