ajout de la page parametre

--- a/App/Views/login.twig
+++ b/App/Views/login.twig
@@ -14,12 +14,14 @@
         <label for="email" >Adresse email</label>
         <input type="email" id="email" name="email" placeholder="Votre adresse mail">
         <label for="mdp" >Mot de passe</label>
-        <input type="password" id="mdp" name="password" placeholder="Votre mot de passe">
+        <input type="password" id="mdp" name="password"  placeholder="Votre mot de passe">
         <input type="submit" value="Connexion">
     </form>
 
+    <p>Identifiant: petitjean.elise@voila.fr - Mdp: pwDeschamps</p>
     <p>Identifiant: Leleu.D@noos.fr - Mdp: pwLeleu</p>
     <p>Identifiant: Marion.T@yahoo.fr - Mdp: pwMarion</p>
+    <p>Test V2 Identifiant: Durand.D@orange.fr - Mdp: pwDurand</p>
 
 </div>
 </body>
