--- a/App/Views/formation.twig
+++ b/App/Views/formation.twig
@@ -3,60 +3,58 @@
 {% block content %}
 
 
-    <!-- Page Content -->
     <div id="page-wrapper">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="page-header">{{ page.title }} <a href="{{ path_for('form_formation') }}"><i class="fa fa-plus-circle" aria-hidden="true"></i></a></h1>
                     <div class="row">
-                            <div class="panel panel-default">
-                                <div class="panel-heading">
-                                    Formation(s) de {{ page.employee[0].getName() }} {{ page.employee[0].getFirstname() }}
-                                </div>
-                                <!-- /.panel-heading -->
-                                <div class="panel-body">
-                                    <div class="table-responsive">
-
-                                            {% if(formations!=null) %}
-
-                                                <table class="table table-striped table-bordered table-hover">
-                                                <thead>
-                                                <tr>
-                                                    <th>Date</th>
-                                                    <th>Libelle</th>
-                                                </tr>
-                                                </thead>
-                                                <tbody>
-
-                                            {% for formation in formations %}
-
-                                                <tr><td> {{ formation.getDate()  }} </td><td> {{ formation.getFormationLibelle()}} </td></tr>
-
-                                            {% endfor %}
-
-                                                </tbody>
-
-                                            {% else %}
-                                                Inscrivez vous a une formation
-                                            {% endif %}
-
-                                        </table>
-                                    </div>
-                                    <!-- /.table-responsive -->
-                                </div>
-                                <!-- /.panel-body -->
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                Formation(s) de {{ page.employee[0].getName() }} {{ page.employee[0].getFirstname() }}
                             </div>
-                            <!-- /.panel -->
+                            <div class="panel-body">
+                                <div class="table-responsive">
+
+                                        {% if(formations!=null) %}
+
+                                            <table class="table table-striped table-bordered table-hover">
+                                            <thead>
+                                            <tr>
+                                                <th>Date</th>
+                                                <th>Libelle</th>
+                                                <th>Modifier</th>
+                                                <th>Supprimer</th>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+
+                                        {% for formation in formations %}
+
+                                            <tr>
+                                                <td> {{ formation.getDate()  }} </td>
+                                                <td> {{ formation.getFormationLibelle()}} </td>
+                                                <td> <a href="Formation/modifier/{{ formation.getId() }}"><i class="fa fa-pencil" aria-hidden="true"></i></a> </td>
+                                                <td> <a href="Formation/supprimer/{{ formation.getId() }}"><i class="fa fa-times" aria-hidden="true"></i></a> </td>
+                                            </tr>
+
+                                        {% endfor %}
+
+                                            </tbody>
+
+                                        {% else %}
+                                            Inscrivez vous a une formation
+                                        {% endif %}
+
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <!-- /.col-lg-12 -->
             </div>
-            <!-- /.row -->
         </div>
-        <!-- /.container-fluid -->
     </div>
-    <!-- /#page-wrapper -->
 
 
 {% endblock %}
