ajout la page modification d'une absence

--- a/App/Views/absence.twig
+++ b/App/Views/absence.twig
@@ -8,7 +8,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">{{ page.title }} <a href="{{ path_for('form_absence') }}"><i class="fa fa-plus-circle" aria-hidden="true"></i></a></h1>
+                    <h1 class="page-header">{{ page.title }} <a href="{{ path_for('add_absence') }}"><i class="fa fa-plus-circle" aria-hidden="true"></i></a></h1>
                     <div class="row">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
@@ -27,6 +27,8 @@
                                                 <th>Date de fin</th>
                                                 <th>Motif</th>
                                                 <th>Type</th>
+                                                <th>Modifier</th>
+                                                <th>Supprimer</th>
                                             </tr>
                                             </thead>
 
@@ -34,7 +36,14 @@
 
                                         {% for absence in absences %}
 
-                                            <tr><td> {{ absence.getStartDate()  }} </td><td>{{ absence.getEndDate() }} </td><td>{{ absence.getAbsencePattern() }}</td><td>{{ absence.getType() }}</td></tr>
+                                            <tr>
+                                                <td> {{ absence.getStartDate()  }} </td>
+                                                <td>{{ absence.getEndDate() }} </td>
+                                                <td>{{ absence.getAbsencePattern() }}</td>
+                                                <td>{{ absence.getType() }}</td>
+                                                <td><a href="{{ path_for('edit_absence', {'absence_id':absence.getId()} ) }}"> <i class="fa fa-pencil" aria-hidden="true"></i> </a></td>
+                                                {#<td><a href="{{ path_for('delete_absence', {'absence_id':absence.getId()} ) }}"> <i class="fa fa-times" aria-hidden="true"></i> </a></td>#}
+                                            </tr>
 
                                         {% endfor %}
                                             </table>
