--- a/App/Views/form_formation.twig
+++ b/App/Views/form_formation.twig
@@ -2,13 +2,40 @@
 
 {% block content %}
 
-    <!-- Page Content -->
     <div id="page-wrapper">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">Ajouter une Formation</h1>
-                    <h3 style="text-align: center">Page en cours de développement</h3>
+                    <h1 class="page-header">{{ page.title }}</h1>
+                    {% if(page.msg_err!=null) %}
+                        <div class="alert alert-info" role="alert">{{ page.msg_err }}</div>
+                    {% endif %}
+                    <div class="row">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">S'inscrire a une formation</div>
+                            <div class="panel-body">
+                                <div class="col-md-4">
+
+                                    {% if(formations!=null) %}
+                                    <form method="POST" action="{{ path_for('addFormation_traitement') }}">
+                                        <select name="formation_id">
+
+                                        {% for formation in formations %}
+                                                <option  value="{{ formation.getId() }}">{{ formation.getFormationLibelle() }} - {{ formation.getDate() }}</option>
+                                        {% endfor %}
+                                        </select>
+                                        <br/>
+                                        <br/>
+                                        <a><button type="submit" name="ajouter" value="ajouter">Ajouter</button></a>
+                                        <a href="{{ path_for('formation') }}"><button type="button"  value="Annuler">Retour</button></a>
+                                    </form>
+                                    {% else %}
+                                        Il n'y a aucunes formation de plannifiée.
+                                    {% endif %}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
