--- a/App/Views/formation.twig
+++ b/App/Views/formation.twig
@@ -8,6 +8,10 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="page-header">{{ page.title }} <a href="{{ path_for('add_formation') }}"><i class="fa fa-plus-circle" aria-hidden="true"></i></a></h1>
+                    {% if(page.msg_err!=null) %}
+                        <div class="alert alert-info" role="alert">{{ page.msg_err }}</div>
+                    {% endif %}
+
                     <div class="row">
                         <div class="panel panel-default">
                             <div class="panel-heading">
@@ -23,7 +27,6 @@
                                             <tr>
                                                 <th>Date</th>
                                                 <th>Libelle</th>
-                                                <th>Modifier</th>
                                                 <th>Supprimer</th>
                                             </tr>
                                             </thead>
@@ -34,7 +37,7 @@
                                             <tr>
                                                 <td> {{ formation.getDate()  }} </td>
                                                 <td> {{ formation.getFormationLibelle()}} </td>
-                                                <td> <a href="Formation/supprimer/{{ formation.getId() }}"><i class="fa fa-times" aria-hidden="true"></i></a> </td>
+                                                <td> <a href="{{ path_for('delete_formation', {'formation_id':formation.getId()} ) }}"><i class="fa fa-times" aria-hidden="true"></i></a> </td>
                                             </tr>
 
                                         {% endfor %}
