--- a/App/Views/parametre.twig
+++ b/App/Views/parametre.twig
@@ -10,7 +10,7 @@
                     <h1 class="page-header">{{ page.title }}</h1>
                     <div class="row">
                         <div class="panel panel-default">
-                            <div class="panel-heading">Voici vos informations de votre compte</div>
+                            <div class="panel-heading">Voici les informations de votre compte</div>
                             <div class="panel-body">
                                 <div class="col-md-6">
                                     <div class="form-group">
