modification des identifiants

--- a/App/Views/login.twig
+++ b/App/Views/login.twig
@@ -19,9 +19,8 @@
     </form>
 
     <p>Identifiant: petitjean.elise@voila.fr - Mdp: pwDeschamps</p>
-    <p>Identifiant: Leleu.D@noos.fr - Mdp: pwLeleu</p>
-    <p>Identifiant: Marion.T@yahoo.fr - Mdp: pwMarion</p>
-    <p>Test V2 Identifiant: Durand.D@orange.fr - Mdp: pwDurand</p>
+    <p>Identifiant: Leroy.A@yahoo.fr - Mdp: pwLeroy</p>
+    <p>Identifiant: Aubert.J@dbmail.com - Mdp: pwAubert</p>
 
 </div>
 </body>
