--- a/App/Views/layout.twig
+++ b/App/Views/layout.twig
@@ -12,17 +12,17 @@
     <title>{{ page.title }}</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="{{ page.chemin }}../sb-admin2/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/sb-admin2/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- MetisMenu CSS -->
-    <link href="{{ page.chemin }}../sb-admin2/vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
+    <link href="/sb-admin2/vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="{{ page.chemin }}../sb-admin2/dist/css/sb-admin-2.css" rel="stylesheet">
+    <link href="/sb-admin2/dist/css/sb-admin-2.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="{{ page.chemin }}../sb-admin2/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
+    <link href="/sb-admin2/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+l
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -128,16 +128,16 @@
 <!-- /#wrapper -->
 
 <!-- jQuery -->
-<script src="{{ page.chemin }}../sb-admin2/vendor/jquery/jquery.min.js"></script>
+<script src="/sb-admin2/vendor/jquery/jquery.min.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="{{ page.chemin }}../sb-admin2/vendor/bootstrap/js/bootstrap.min.js"></script>
+<script src="/sb-admin2/vendor/bootstrap/js/bootstrap.min.js"></script>
 
 <!-- Metis Menu Plugin JavaScript -->
-<script src="{{ page.chemin }}../sb-admin2/vendor/metisMenu/metisMenu.min.js"></script>
+<script src="/sb-admin2/vendor/metisMenu/metisMenu.min.js"></script>
 
 <!-- Custom Theme JavaScript -->
-<script src="{{ page.chemin }}../sb-admin2/dist/js/sb-admin-2.js"></script>
+<script src="/sb-admin2/dist/js/sb-admin-2.js"></script>
 
 </body>
 
